waybar/style.css
* {
  font-family: "JetBrainsMono Nerd Font Propo", "Symbols Nerd Font";
  font-weight: 600;
  font-size: 14px;
}

#waybar {
  background-color: #1F262B;
  border: 1px solid #E6E3DE;
  color: rgba(255,255,255,0.9);
  transition-property: background-color;
  transition-duration: .5s;
}

window#waybar {
  border-radius: 12px;
}

.modules-left {
  margin-left: 16px;
}

.modules-right {
  margin-right: 18px;
}

#workspaces button {
  all: initial;
  padding: 0 6px;
  margin: 0 1.5px;
  min-width: 9px;
}

#workspaces button.empty {
  opacity: 0.5;
}

#mpris,
#clock {
  background-color: transparent;
}

#custom-seperator {
  margin: 0 -4px;
  opacity: 0.4;
}

/* Power profiles */
#power-profiles-daemon {
  padding-left: 6px;
}

